[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["DMonsia <monsia.dougban@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
xlsxwriter = "^3.1.7"
xlrd = "^2.0.1"
openpyxl = "^3.1.2"
xlwings = "^0.30.12"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
isort = "^5.12.0"
black = "^23.9.1"
mypy = "^1.6.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
